fix overflow mobile

--- a/src/sass/rules/_media.scss
+++ b/src/sass/rules/_media.scss
@@ -48,7 +48,7 @@
   .container-spaceF01, .container-spaceF02, .container-spaceF03,
   .container-spaceF04 {
     .container-content-SpaceF {
-      margin-left: 20px;
+      margin-left: 17px;
     }
   }
 }
