--- a/src/sass/rules/pages-rules/home.scss
+++ b/src/sass/rules/pages-rules/home.scss
@@ -91,6 +91,10 @@ body, html {
   }
 }
 
+.btn {
+  margin: 5px;
+}
+
 footer {
   background-color: black;
   height: 75px;
